Example with part portfolio

--- a/index.html
+++ b/index.html
@@ -4,11 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    
+    <section class="user-cards">
+      <h1 class="main-title">This is my portfolio</h1>
+      <article class="user-card">
+        <img
+          class="user-card-img"
+          src="./assets/images/angelina-jolie.jpg"
+          alt=""
+        />
+        <div class="user-card-info">
+          <h2 class="user-card-name">angelina jolie</h2>
+          <div class="btn-container">
+            <button class="btn-designer">ui designer</button>
+            <button class="btn-follow">+ follow</button>
+          </div>
+          <ul class="social">
+            <li class="social-item">
+              <a class="social-link" href=""> a </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href=""> b </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href=""> c </a>
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
   </body>
 </html>
